--- a/frontend/src/style/Breeds.module.css
+++ b/frontend/src/style/Breeds.module.css
@@ -1,5 +1,26 @@
+.container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 4%;
+}
+
+
+
+
 /* Medium screens */
-@media all and (min-width: 651px) and (max-width: 900px) {}
+@media all and (min-width: 651px) and (max-width: 900px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2%;
+    }
+}
 
 /* Small screens */
-@media all and (min-width: 250px) and (max-width: 650px) {}
+@media all and (min-width: 250px) and (max-width: 650px) {
+    .container{
+        display: grid;
+        grid-template-columns:1fr;
+        grid-gap: 1%;
+    }
+}
