--- a/frontend/src/style/Navbar.module.css
+++ b/frontend/src/style/Navbar.module.css
@@ -1,3 +1,10 @@
+.nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(11, 163, 223);
+    height: 50px;
+}
 /* Medium screens */
 @media all and (min-width: 651px) and (max-width: 900px) {}
 
